compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/TwoOverrides.java
public final class TwoOverrides /* TwoOverrides*/ implements java.lang.Iterable<@org.jetbrains.annotations.NotNull() java.lang.String>, kotlin.collections.Iterable<@org.jetbrains.annotations.NotNull() java.lang.String>, kotlin.jvm.internal.markers.KMappedMarker {
  @java.lang.Override()
  @org.jetbrains.annotations.Nullable()
  public @org.jetbrains.annotations.Nullable() java.lang.Void iterator();//  iterator()

  @java.lang.Override()
  @org.jetbrains.annotations.Nullable()
  public @org.jetbrains.annotations.Nullable() java.lang.Void iterator();//  iterator()

  public  TwoOverrides();//  .ctor()
}
